brain/sources/prod-metadata/objects/Marketing__c/Marketing__c.object-meta.xml
<CustomObject>
    <label>Marketing</label>
    <nameField>
        <label>Marketing Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Marketing</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>