brain/sources/prod-metadata/objects/Marketing__c/fields/Actual_Joining_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Joining_Date__c</fullName>
    <label>Actual Joining Date</label>
    <type>Date</type>
</CustomField>