brain/sources/prod-metadata/objects/Marketing__c/fields/Assign_to_Lead__c.field-meta.xml
<CustomField>
    <fullName>Assign_to_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Assign to Lead</label>
    <type>Checkbox</type>
</CustomField>