brain/sources/prod-metadata/objects/Marketing__c/fields/Candidate__c.field-meta.xml
<CustomField>
    <fullName>Candidate__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Candidate</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Marketing</relationshipLabel>
    <relationshipName>Marketing</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>