brain/sources/prod-metadata/objects/Marketing__c/fields/Effective_Recruiter_Name__c.field-meta.xml
<CustomField>
    <fullName>Effective_Recruiter_Name__c</fullName>
    <formula>IF(ISPICKVAL(Recruiter__r.Employment_Status__c, &apos;Active&apos;),
   Recruiter__r.Name,
   Recruiter__r.Assigned_Sr_Recruiter__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Effective Recruiter Name</label>
    <type>Text</type>
</CustomField>