brain/sources/prod-metadata/objects/Marketing__c/fields/Initial_call_completed__c.field-meta.xml
<CustomField>
    <fullName>Initial_call_completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Initial call completed</label>
    <type>Checkbox</type>
</CustomField>