brain/sources/prod-metadata/objects/Marketing__c/fields/Introduction_script_created__c.field-meta.xml
<CustomField>
    <fullName>Introduction_script_created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Introduction script created</label>
    <type>Checkbox</type>
</CustomField>