brain/sources/prod-metadata/objects/Marketing__c/fields/Job_boards_created__c.field-meta.xml
<CustomField>
    <fullName>Job_boards_created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Job boards created</label>
    <type>Checkbox</type>
</CustomField>