brain/sources/prod-metadata/objects/Marketing__c/fields/Marketing_Type__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Type__c</fullName>
    <label>Marketing Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full time</fullName>
            </value>
            <value>
                <fullName>C2C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>