brain/sources/prod-metadata/objects/Marketing__c/fields/No_of_Interviews_rescheduled_by_candidat__c.field-meta.xml
<CustomField>
    <fullName>No_of_Interviews_rescheduled_by_candidat__c</fullName>
    <inlineHelpText>Number of Interviews Rescheduled after 10/04/2025</inlineHelpText>
    <label>No of Interviews rescheduled by candidat</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>