brain/sources/prod-metadata/objects/Marketing__c/fields/Reason_for_paused__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_paused__c</fullName>
    <label>Reason for pause</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>