brain/sources/prod-metadata/objects/Marketing__c/fields/Recruiter__c.field-meta.xml
<CustomField>
    <fullName>Recruiter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recruiter</label>
    <referenceTo>Recruiter__c</referenceTo>
    <relationshipLabel>Marketing</relationshipLabel>
    <relationshipName>Marketing</relationshipName>
    <type>Lookup</type>
</CustomField>