brain/sources/prod-metadata/objects/Marketing__c/fields/Resume_Understanding_Session__c.field-meta.xml
<CustomField>
    <fullName>Resume_Understanding_Session__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Resume Understanding Session</label>
    <type>Checkbox</type>
</CustomField>