brain/sources/prod-metadata/objects/Marketing__c/fields/Senior_Recruiter_Name__c.field-meta.xml
<CustomField>
    <fullName>Senior_Recruiter_Name__c</fullName>
    <formula>IF(Recruiter__r.Assigned_Sr_Recruiter__c != null,
   Recruiter__r.Assigned_Sr_Recruiter__r.Name,
   Recruiter__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Senior Recruiter Name</label>
    <type>Text</type>
</CustomField>