brain/sources/prod-metadata/objects/Marketing__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Candidate</fullName>
            </value>
            <value>
                <fullName>Initial Call</fullName>
            </value>
            <value>
                <fullName>Applications</fullName>
            </value>
            <value>
                <fullName>Offer Letter</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Paused</fullName>
            </value>
            <value>
                <fullName>Stopped</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>