brain/sources/prod-metadata/objects/Marketing__c/fields/Tentative_Joining_Date__c.field-meta.xml
<CustomField>
    <fullName>Tentative_Joining_Date__c</fullName>
    <label>Tentative Joining Date</label>
    <type>Date</type>
</CustomField>