brain/sources/prod-metadata/objects/Marketing__c/fields/TL_Recruiter_Name__c.field-meta.xml
<CustomField>
    <fullName>TL_Recruiter_Name__c</fullName>
    <formula>Recruiter__r.Assigned_Sr_Recruiter__r.Assigned_Sr_Recruiter__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TL Recruiter Name</label>
    <type>Text</type>
</CustomField>