brain/sources/prod-metadata/objects/Marketing__c/validationRules/Recruiter_required_before_applications.validationRule-meta.xml
<ValidationRule>
    <fullName>Recruiter_required_before_applications</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 ISBLANK(Recruiter__c),
 ISPICKVAL(Status__c,&apos;Applications&apos;),
 ISCHANGED(Status__c)
)</errorConditionFormula>
    <errorDisplayField>Recruiter__c</errorDisplayField>
    <errorMessage>Assign a Recruiter before starting the applications</errorMessage>
</ValidationRule>