brain/sources/prod-metadata/objects/Marketing__c/validationRules/Update_Reason_for_Hold.validationRule-meta.xml
<ValidationRule>
    <fullName>Update_Reason_for_Hold</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Status__c , &apos;Paused&apos;),
    ISBLANK(Reason_for_paused__c)
)</errorConditionFormula>
    <errorMessage>Please fill in the details. Reason for pausing</errorMessage>
</ValidationRule>